Ajm/error object v2 rebase (#1370)
Co-authored-by: YuqiDu <istimdu@gmail.com>
Co-authored-by: Tatu Saloranta <tatu.saloranta@datastax.com>
Co-authored-by: Mahesh Rajamani <99678631+maheshrajamani@users.noreply.github.com>
Co-authored-by: Jeffrey Carpenter <jeffrey.carpenter@datastax.com>
Co-authored-by: Hazel <hazel.he@datastax.com>
Co-authored-by: Kathiresan Selvaraj <96088452+kathirsvn@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Yuqi-Du <138714577+Yuqi-Du@users.noreply.github.com>